style.css
body {
    font-family: Arial, sans-serif;
    background-color: #111;
    color: #f2f2f2;
    margin: 0;
    padding: 0;
}


nav {
    background-color: #222;
    padding: 15px;
    text-align: center;
}

nav a {
    color: white;
    text-decoration: none;
    margin: 15px;
    font-weight: bold;
}

nav a:hover {
    color: skyblue;
}


h1 {
    text-align: center;
    text-transform: uppercase;
    letter-spacing: 2px;
}


.highlight {
    color: orange;
    font-weight: bold;
}


#presentation {
    padding: 20px;
    border: 2px solid orange;
    margin: 20px;
    border-radius: 10px;
}


img {
    display: block;
    margin: 20px auto;
    width: 300px;
    border-radius: 10px;
}


table {
    border-collapse: collapse;
    width: 80%;
    margin: 20px auto;
}

th, td {
    border: 1px solid white;
    padding: 8px;
    text-align: center;
}

th {
    background-color: #333;
}


ul {
    list-style-type: square;
}

ol {
    list-style-type: decimal;
}


@keyframes fadeIn {
    from { opacity: 0; }
    to { opacity: 1; }
}

.animation {
    animation: fadeIn 2s ease-in;
}

a{
  color: red
}

